# producer_consumer_csv

./: .coverage  .coverage_consumer  .env  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  test_generator.py
consumer/: dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  reuqirements-dev.txt
consumer/src/adapters/fetch_filenames/: rabbitmq.py
consumer/src/adapters/fetch_filenames_stream/: rabbitmq.py
consumer/src/adapters/file_parse_iot_records/: csv.py
consumer/src/adapters/upsert_iot_records/: postgres.py
consumer/src/deployments/script/: config.py  main.py  setup_logging.py
consumer/src/deployments/scripts/: config.py  main.py  setup_logging.py
consumer/src/entities/: __init__.py  iot_record.py
consumer/src/usecases/: __init__.py  fetch_filenames.py  fetch_filenames_stream.py  file_parse_iot_records.py  upsert_iot_records.py
consumer/tests/test_deployments/test_script/test_main/: utils.py  (+5 more)
producer/: dockerfile  dockerfile.prod  pyproject.toml  requirements-dev.txt  requirements.txt
producer/src/adapters/publish_filenames/: rabbitmq.py
producer/src/adapters/upsert_filenames/: rabbitmq.py
producer/src/deployments/script/: config.py  main.py  setup_logging.py
producer/src/usecases/: __init__.py  publish_filenames.py  upsert_filenames.py
producer/tests/test_adapters/test_publish_filenames/: conftest.py  test_rabbitmq.py
producer/tests/test_deployments/test_main/: conftest.py  test_main_function_failed.py  test_main_function_successful.py  test_traverse_files.py
(+42 files in other folders)
